add admin, more bugs to db

--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -3,8 +3,9 @@
 
     <h1>About the Bug Collector</h1>
     <hr />
-    <p>Hire the Bug Collector</p>
-    <footer>All Rights Reserved, &copy; 2021 Bug Collector</footer>
+    <p>Hire the Bug Collector!</p>
+    <p>Will work for free as long as I get to keep the bugs.</p>
+    
 </body>
 </html>
 
