--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -14,7 +14,7 @@
         <nav>
         <div class="nav-wrapper">
             <ul>
-            <li><a href="/" class="left brand-logo">&nbsp;&nbsp;BugCollector</a></li>
+            <li><a href="/" class="left brand-logo">&nbsp;&nbsp;Bug Collector<img src="https://a.slack-edge.com/production-standard-emoji-assets/13.0/google-medium/1fab2@2x.png"></li>
             </ul>
             <ul class="right">
             <li><a href="/about">About</a></li>
