--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -17,9 +17,10 @@
             <li><a href="/" class="left brand-logo">&nbsp;&nbsp;Bug Collector<img src="https://a.slack-edge.com/production-standard-emoji-assets/13.0/google-medium/1fab2@2x.png"></li>
             </ul>
             <ul class="right">
-            <li><a href="/about">About</a></li>
-            <li><a href="/bugs">All Bugs</a></li>
-            </ul>
+            <li><a href="{% url 'about' %}">About</a></li>
+            <li><a href="{% url 'bugs_create' %}">Add a Bug</a></li>
+            <li><a href="{% url 'index' %}">All Bugs</a></li>
+                        </ul>
         </div>
         </nav>
     </header>
