--- a/main_app/templates/main_app/bug_confirm_delete.html
+++ b/main_app/templates/main_app/bug_confirm_delete.html
@@ -3,11 +3,11 @@
 {% block content %}
 <h1>Delete Bug</h1>
 
-<h4>Are you sure you want to delete <span class="teal-text">{{ object.name }}</span>?</h4>
+<h4>Are you sure you want to delete the <span class="teal-text">{{ object.name }}</span>? It's going to be angry.</h4>
 
 <form action="" method="POST">
 {% csrf_token %}
-<input type="submit" value="Yes - Delete!" class="btn">
-<a href="{% url 'detail' bug.id %}">Cancel</a>
+<input type="submit" value="I'm not afraid - Delete" class="btn">
+<a href="{% url 'detail' bug.id %}">Nevermind!!!</a>
 </form>
 {% endblock %}
